# sbql

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  release-plz.toml
.github/workflows/: pr-tests.yml  release-pr.yml  release.yml
sbql-core/: CHANGELOG.md  Cargo.toml
sbql-core/benches/: postgres_integration.rs  query_builder.rs  query_execution.rs  redis_integration.rs
sbql-core/examples/: mysql_test.rs  profile_memory.rs
sbql-core/src/: config.rs  connection.rs  error.rs  import.rs  lib.rs  pool.rs  query.rs  query_builder.rs  schema.rs  sql_util.rs  tunnel.rs
sbql-core/src/handlers/: connection.rs  mod.rs  mutation.rs  order_filter.rs  query.rs  schema.rs
sbql-core/tests/: db_integration.rs  dynamodb_integration.rs  export_integration.rs  import_integration.rs  mongodb_integration.rs  mysql_integration.rs  redis_integration.rs  sqlite_integration.rs  sqlserver_integration.rs
sbql-ffi/: Cargo.toml
sbql-ffi/src/: convert.rs  lib.rs
sbql-macos/: .swiftlint.yml
sbql-macos/Frameworks/SbqlFFI.xcframework/: Info.plist
sbql-macos/Frameworks/SbqlFFI.xcframework/macos-arm64_x86_64/Headers/: module.modulemap  sbql_ffiFFI.h
sbql-macos/sbql-macos/: SbqlApp.swift  sbql_macos.entitlements
sbql-macos/sbql-macos.xcodeproj/: project.pbxproj
sbql-macos/sbql-macos.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
sbql-macos/sbql-macos.xcodeproj/project.xcworkspace/xcuserdata/josesaulburgos.xcuserdatad/: UserInterfaceState.xcuserstate
sbql-macos/sbql-macos.xcodeproj/xcuserdata/josesaulburgos.xcuserdatad/xcschemes/: xcschememanagement.plist
sbql-macos/sbql-macos/Extensions/: Duration+Extensions.swift  View+Extensions.swift
sbql-macos/sbql-macos/Models/: CommandItem.swift  Connection+BackendDisplay.swift  Connection.swift  DiagramData.swift  DiffResult.swift  QueryHistoryEntry.swift  QueryResult.swift  QueryTab.swift  SavedQuery.swift  TableEntry.swift
sbql-macos/sbql-macos/Services/: BiometricService.swift  QueryStorageService.swift  ResultsExporter.swift  SbqlService.swift
sbql-macos/sbql-macos/Theme/: Animations.swift  SbqlTheme.swift  ThemeManager.swift  Typography.swift
sbql-macos/sbql-macos/ViewModels/: AppViewModel.swift  ConnectionsViewModel.swift  DiagramViewModel.swift  EditorViewModel.swift  QueryHistoryViewModel.swift  ResultsViewModel.swift  SavedQueriesViewModel.swift
sbql-macos/sbql-macos/Views/: CommandPalette.swift  MainWindow.swift  QueryHistoryModal.swift  SavedQueriesModal.swift  SettingsView.swift  TablePreviewModal.swift
sbql-macos/sbql-macos/Views/Components/: BackendBadgeView.swift  BadgePillView.swift  EmptyStateView.swift  FormFieldRow.swift  HoverButtonStyle.swift  HoverHighlight.swift  LoadingOverlay.swift  ModalPresenter.swift  SearchFieldView.swift  SectionHeaderView.swift  TabSwitchModifier.swift  ToastNotification.swift
sbql-macos/sbql-macos/Views/Diagram/: DiagramCanvas.swift  DiagramEdgeGeometry.swift  DiagramLayoutConstants.swift  DiagramTableNode.swift  DiagramView.swift  DiagramZoomToolbar.swift
sbql-macos/sbql-macos/Views/Editor/: EditorToolbar.swift  SQLCompletionPopup.swift  SQLEditorView.swift  SQLSyntaxHighlighter.swift  TreeSitterHighlighter.swift
sbql-macos/sbql-macos/Views/MenuBar/: MenuBarManager.swift  MenuBarPopoverView.swift
sbql-macos/sbql-macos/Views/Results/: CellEditor.swift  FilterBar.swift  ResultsTableView.swift  ResultsToolbar.swift  ResultsView.swift
sbql-macos/sbql-macos/Views/Sidebar/: ConnectionFormSheet.swift  ConnectionRow.swift  QueryHistorySection.swift  SaveQuerySheet.swift  SavedQueriesSection.swift  SidebarView.swift  TableRow.swift
sbql-macos/sbql-macosTests/: AppViewModelTests.swift  ConnectionsViewModelTests.swift  DiagramViewModelTests.swift  EditorViewModelTests.swift  ModelTests.swift  ResultsViewModelTests.swift  sbql_macosTests.swift
sbql-macos/sbql-macosUITests/: sbql_macosUITests.swift  sbql_macosUITestsLaunchTests.swift
sbql-tui/: CHANGELOG.md  Cargo.toml
sbql-tui/src/: action.rs  app.rs  completion.rs  events.rs  highlight.rs  main.rs  test_helpers.rs  worker.rs
sbql-tui/src/handlers/: cell_edit.rs  connections.rs  diagram.rs  editor.rs  filter.rs  mod.rs  mouse.rs  navigation.rs  results.rs  tables.rs
sbql-tui/src/ui/: cell_edit.rs  connections.rs  diagram.rs  editor.rs  layout.rs  mod.rs  results.rs  theme.rs
scripts/: build-xcframework.sh
