[workspace]
members = [
    "sbql-core",
    "sbql-tui",
    "sbql-ffi",
]
resolver = "2"

[workspace.package]
version = "0.1.2"
edition = "2021"
authors = ["sbql contributors"]
license = "MIT"

[workspace.dependencies]
# Local workspace crate
sbql-core = { path = "sbql-core", version = "0.1.2" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "sqlite", "uuid", "chrono", "json", "bigdecimal"] }
redis = { version = "0.27", features = ["tokio-comp", "aio", "connection-manager"] }

# SQL parsing
sqlparser = "0.53"

# Config serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Credential storage
keyring = { version = "3", features = ["apple-native"] }

# Identifiers
uuid = { version = "1", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# TUI
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tui-textarea = { version = "0.7", features = ["crossterm"] }

# Ordered map (used by diagram data loader)
indexmap = "2"

# Tree-sitter (syntax highlighting)
tree-sitter = "0.25"
tree-sitter-highlight = "0.25"
tree-sitter-sequel = "0.3"
