[package]
name = "sbql-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
sqlx.workspace = true
sqlparser.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
keyring.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
dirs = "5"
indexmap.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
