[package]
name = "sbql-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core engine for sbql"
repository = "https://github.com/Osmait/sbql"

[dependencies]
tokio.workspace = true
sqlx.workspace = true
sqlparser.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
keyring.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
csv.workspace = true
dirs = "5"
futures = "0.3"
indexmap.workspace = true
redis.workspace = true
aws-config.workspace = true
aws-sdk-dynamodb.workspace = true
mongodb.workspace = true
tiberius.workspace = true
bb8.workspace = true
bb8-tiberius.workspace = true
tokio-util.workspace = true

[features]
dhat-heap = ["dep:dhat"]

[dependencies.dhat]
workspace = true
optional = true

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres", "redis", "mysql"] }
tempfile = "3"
criterion = { workspace = true }

[[bench]]
name = "query_builder"
harness = false

[[bench]]
name = "query_execution"
harness = false

[[bench]]
name = "postgres_integration"
harness = false

[[bench]]
name = "redis_integration"
harness = false
