[package]
name = "sbql-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "sbql"
path = "src/main.rs"

[dependencies]
sbql-core = { path = "../sbql-core" }
tokio.workspace = true
serde.workspace = true
uuid.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ratatui.workspace = true
crossterm.workspace = true
tui-textarea.workspace = true
